upload changes for CORS problem

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Management</title>
+    <script>
+      // Redireccionar si la URL no termina con barra '/'
+      if (window.location.href.substr(-1) !== '/') {
+        window.location.href = window.location.href + '/';
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
